test/bad/keys.inc.c

jwr_obj();
jwr_key("a");
jwr_key("b");
jwr_null();

jwr_pop();
